--- a/config/block.block.basicblog_primary_admin_actions.yml
+++ b/config/block.block.basicblog_primary_admin_actions.yml
@@ -8,7 +8,7 @@ _core:
   default_config_hash: Q9_2whdOj1YIomfvsIfopROW4FT_X5pY0DjdOiOaQ5U
 id: basicblog_primary_admin_actions
 theme: basicblog
-region: header
+region: admin
 weight: -5
 provider: null
 plugin: local_actions_block
