--- a/config/block.block.basicblog_secondary_local_tasks.yml
+++ b/config/block.block.basicblog_secondary_local_tasks.yml
@@ -8,7 +8,7 @@ _core:
   default_config_hash: ydSxdq7R66I8UMC460rOzlfzvlUL4VRbdwc6z9DWaUI
 id: basicblog_secondary_local_tasks
 theme: basicblog
-region: header
+region: admin
 weight: -2
 provider: null
 plugin: local_tasks_block
