--- a/config/block.block.basicblog_syndicate.yml
+++ b/config/block.block.basicblog_syndicate.yml
@@ -1,6 +1,6 @@
 uuid: 75a73859-1ad6-4ff2-b137-f7b73d39e7e5
 langcode: en
-status: true
+status: false
 dependencies:
   module:
     - node
@@ -11,7 +11,7 @@ _core:
 id: basicblog_syndicate
 theme: basicblog
 region: header
-weight: -6
+weight: -3
 provider: null
 plugin: node_syndicate_block
 settings:
