--- a/web/themes/basicblog/basicblog.info.yml
+++ b/web/themes/basicblog/basicblog.info.yml
@@ -7,6 +7,7 @@ core_version_requirement: ^11
 base theme: false
 starterkit: false
 regions:
+  admin: 'Admin'
   header: 'Header'
   content: 'Content'
 libraries:
