--- a/config/views.view.frontpage.yml
+++ b/config/views.view.frontpage.yml
@@ -25,7 +25,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: ''
+      title: 'Latest articles'
       fields: {  }
       pager:
         type: full
