--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/core-project-message": "^11.0",
         "drupal/core-recommended": "^11.0",
         "drupal/minifyhtml": "^2.0",
+        "drupal/pathauto": "^1.13",
         "drupal/tome": "^1.13",
         "drush/drush": "^13.1"
     },
