--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -36,12 +36,14 @@ module:
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   tome_base: 0
   tome_static: 0
   toolbar: 0
   update: 0
   user: 0
   views_ui: 0
+  pathauto: 1
   views: 10
   standard: 1000
 theme:
