--- a/config/editor.editor.full_html.yml
+++ b/config/editor.editor.full_html.yml
@@ -35,6 +35,7 @@ settings:
       - code
       - '|'
       - sourceEditing
+      - footnotes
   plugins:
     ckeditor5_codeBlock:
       languages:
